Display unstyled guesses and fix layout shifting

--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 body {
   display: grid;
   grid-template-columns: 300px 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 300px 1fr;
   grid-template-areas: 
     "letters answers"
     "guess answers";
+  height: 100vh;
 }
 
 #layout-letters {
